--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -43,4 +43,4 @@ jobs:
           server-computer-name: ${{ secrets.SERVER_COMPUTER_NAME }}
           server-username: ${{ secrets.SERVER_USERNAME }}
           server-password: ${{ secrets.SERVER_PASSWORD }}
-          source-path: 'D:\a\MicroProductInventory\MicroProductInventory\bin\Release\net8.0'
+          source-path: 'bin\Release\net8.0'
